# GameDB

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Invoke-WSLBuildAll.ps1  Invoke-WindowsBuildAll.ps1  README.md  install_linux_requirements.sh  vcpkg.json
GameDB/: CMakeLists.txt
GameDB.Editor/: CMakeLists.txt
GameDB.Editor/Include/GameDB/Editor/: Application.hpp  Color.hpp  HelloWorld.hpp  Palette.hpp  Style.hpp  Theme.hpp  Vector2.hpp
GameDB.Editor/Resources/Themes/: Default.json
GameDB.Editor/Src/: Application.cpp  Color.cpp  HelloWorld.cpp  Palette.cpp  Style.cpp  Theme.cpp  Vector2.cpp
GameDB/Docs/: ClassDiagram.md
GameDB/Include/GameDB/: HelloWorld.hpp
GameDB/Include/GameDB/Core/: Pointers.hpp
GameDB/Include/GameDB/DI/: DIContainer.hpp
GameDB/Include/GameDB/Data/: BaseType.hpp  BaseValue.hpp  Field.hpp  Guid.hpp  Schema.hpp  StringType.hpp  StringValue.hpp  Table.hpp  TableRow.hpp
GameDB/Include/GameDB/Debug/: Assert.hpp
GameDB/Include/GameDB/Profiler/: Profiler.hpp
GameDB/Include/GameDB/Serializers/: Json.hpp
GameDB/Src/: HelloWorld.cpp
GameDB/Src/Core/: Pointers.cpp
GameDB/Src/DI/: DIContainer.cpp
GameDB/Src/Data/: BaseType.cpp  BaseValue.cpp  Field.cpp  Guid.cpp  Schema.cpp  StringType.cpp  StringValue.cpp  Table.cpp  TableRow.cpp
GameDB/Src/Debug/: Assert.cpp
GameDB/Src/Serializers/: Json.cpp
Src/: CMakeLists.txt
Src/exeEditor/: CMakeLists.txt  Main.cpp
Src/exeEditor/Include/GameDB/: Config.hpp.in
Src/exeEditor/Resources/Themes/: Default.json
Src/libContainer/: CMakeLists.txt  Map.cpp  RingBuffer.cpp  Set.cpp  StringStream.cpp  Vector.cpp
Src/libContainer/Include/GameDB/: libContainer.hpp
Src/libContainer/Include/GameDB/Container/: Map.hpp  RingBuffer.hpp  Set.hpp  String.hpp  StringStream.hpp  UnorderedMap.hpp  UnorderedSet.hpp  Vector.hpp
Src/libCore/: CMakeLists.txt
Src/libCore/libletContainer/: CMakeLists.txt  String.cpp  UnorderedMap.cpp  UnorderedSet.cpp
Src/libCore/libletContainer/Include/GameDB/: Container.hpp
Src/libCore/libletData/: CMakeLists.txt  DataColumn.cpp  DataRow.cpp  DataTable.cpp  DataType.cpp  DataTypeString.cpp  DataValue.cpp  DataValueString.cpp
Src/libCore/libletData/Include/GameDB/: Data.hpp
Src/libCore/libletDebug/: Assert.cpp  CMakeLists.txt  Logger.cpp  LoggerSink.cpp  LoggerSinkStdOut.cpp  ProfileFrameSample.cpp
Src/libCore/libletDebug/Include/GameDB/: Debug.hpp
Src/libCore/libletFormat/: CMakeLists.txt  Format.cpp
Src/libCore/libletMemory/: CMakeLists.txt  MallocAllocator.cpp  NewAllocator.cpp  StlContainerAllocator.cpp
Src/libCore/libletMemory/Include/GameDB/: Memory.hpp
Src/libDI/: CMakeLists.txt  DIContainer.cpp  SingletonContainer.cpp
Src/libDI/Include/GameDB/: libDI.hpp
Src/libDI/Include/GameDB/DI/: DIContainer.hpp  SingletonContainer.hpp
Src/libData/: CMakeLists.txt  DataColumn.cpp  DataId.cpp  DataRow.cpp  DataSet.cpp  DataTable.cpp  DataType.cpp  DataTypeString.cpp  DataValueString.cpp
Src/libData/Include/GameDB/: libData.hpp
Src/libData/Include/GameDB/Data/: DataColumn.hpp  DataId.hpp  DataRow.hpp  DataSet.hpp  DataTable.hpp  (+4 more)
Src/libDataEditor/: CMakeLists.txt  CreateDataColumnEditorWindow.cpp  CreateDataTableEditorWindow.cpp  DataEditorWidgets.cpp  DataSetEditorWindow.cpp  DataTableEditorWindow.cpp  EditDataColumnEditorWindow.cpp
Src/libDataEditor/Include/GameDB/: libDataEditor.hpp
Src/libDataSerializer/: CMakeLists.txt
Src/libDebug/: Assert.cpp  CMakeLists.txt  Log.cpp  LogEntry.cpp  LogSink.cpp  LogSinkStdOut.cpp  LogSpool.cpp  LogType.cpp  Logger.cpp  ProfileScopeGuard.cpp  ProfileScopeSample.cpp  ProfileSectionGuard.cpp  Profiler.cpp
Src/libDebug/Include/GameDB/: libDebug.hpp
Src/libDebugEditor/: CMakeLists.txt  ConsoleEditorWindow.cpp  LoggerSinkConsole.cpp
Src/libDebugEditor/Include/GameDB/: libDebugEditor.hpp
Src/libEditor/: CMakeLists.txt  Editor.cpp  EditorMenu.cpp  EditorMenuGroup.cpp  EditorMenuItem.cpp  EditorWidgets.cpp  EditorWindow.cpp  FontAwesomeIcons.cpp
Src/libEditor/Include/GameDB/: libEditor.hpp
Src/libEditorTheme/: CMakeLists.txt  Palette.cpp  Style.cpp  Theme.cpp
Src/libEditorTheme/Include/GameDB/: libEditorTheme.hpp
Src/libEditorThemeSerializer/: CMakeLists.txt  PaletteJsonSerializer.cpp  StyleJsonSerializer.cpp  ThemeJsonSerializer.cpp
Src/libEditorThemeSerializer/Include/GameDB/: libEditorThemeSerializer.hpp
Src/libEvent/: CMakeLists.txt  Event.cpp
Src/libEvent/Include/GameDB/: libEvent.hpp
Src/libFileSystem/: CMakeLists.txt  File.cpp  FileSystem.cpp  NativeFile.cpp  NativeFileSystem.cpp  VirtualFileSystem.cpp
Src/libFileSystem/Include/GameDB/: libFileSystem.hpp
Src/libFormat/: CMakeLists.txt
Src/libFormat/Include/GameDB/: libFormat.hpp
Src/libJson/: CMakeLists.txt  Json.cpp
Src/libJson/Include/GameDB/: libJson.hpp
Src/libKernel/: CMakeLists.txt
Src/libKernel/Include/GameDB/: libKernel.hpp
Src/libKernel/Linux/: CMakeLists.txt  Kernel.cpp
Src/libKernel/MacOS/: CMakeLists.txt  Kernel.cpp
Src/libKernel/Windows/: CMakeLists.txt  Kernel.cpp
Src/libLog/: CMakeLists.txt  Log.cpp  LogEntry.cpp  LogSink.cpp  LogSinkStdOut.cpp  LogSpool.cpp  LogType.cpp
Src/libLog/Include/GameDB/: libLog.hpp
Src/libLogEditor/: CMakeLists.txt  ConsoleEditorWindow.cpp  LoggerSinkConsole.cpp
Src/libLogEditor/Include/GameDB/: libLogEditor.hpp
Src/libMath/: CMakeLists.txt  Color.cpp  Vector2.cpp
Src/libMath/Include/GameDB/: libMath.hpp
Src/libMathSerializer/: CMakeLists.txt  ColorJsonSerializer.cpp  Vector2JsonSerializer.cpp
Src/libMathSerializer/Include/GameDB/: libMathSerializer.hpp
Src/libMemory/: CMakeLists.txt  FreeListAllocator.cpp  GeneralAllocator.cpp  MallocAllocator.cpp  NewAllocator.cpp  Pointers.cpp  ThresholdAllocator.cpp  TrackerAllocator.cpp
Src/libMemory/Include/GameDB/: libMemory.hpp
Src/libProfiler/: CMakeLists.txt  ProfileScopeGuard.cpp  ProfileSectionGuard.cpp  Profiler.cpp
Src/libProfiler/Include/GameDB/: libProfiler.hpp
Src/libProject/: CMakeLists.txt
Src/libWindow/: CMakeLists.txt  Window.cpp
Src/libWindow/Include/GameDB/: libWindow.hpp
(+108 files in other folders)
