add_subdirectory(exeEditor)
add_subdirectory(libContainer)
add_subdirectory(libCore)
add_subdirectory(libData)
add_subdirectory(libDataEditor)
add_subdirectory(libDataSerializer)
add_subdirectory(libDebug)
add_subdirectory(libDI)
add_subdirectory(libEditor)
add_subdirectory(libEditorTheme)
add_subdirectory(libEditorThemeSerializer)
add_subdirectory(libEvent)
add_subdirectory(libFileSystem)
add_subdirectory(libFormat)
add_subdirectory(libJson)
add_subdirectory(libKernel)
add_subdirectory(libMath)
add_subdirectory(libMathSerializer)
add_subdirectory(libMemory)
add_subdirectory(libProject)
add_subdirectory(libWindow)
